feat: Implement authentication

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,17 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/moneylover
     username: root
-    password: 123456789
+    password: dangtiep204
+
+
+
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL57Dialect
         format_sql: true
+
+
     hibernate:
       ddl-auto: update
       .naming:
@@ -19,3 +24,9 @@ spring:
               hibernate:
                 jdbc:
                   time_zone: UTC
+
+  security:
+    user:
+      password={bcrypt}encryptedPassword:
+
+
