feat: Thêm sÆửa xóa  stìm kiÃếm phân trang category, thêm sÆửa xóa ngân sÃách

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/money
+    url: jdbc:mysql://localhost:3306/moneylover
     username: root
-    password: 123456789
+    password: dangtiep204
 
   jpa:
     properties:
